--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
   text-align: center;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+h3 {
+  margin: 0.8rem 0 0.2rem 0;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -28,9 +38,16 @@
   color: #61dafb;
 }
 
+.board {
+  margin-bottom: 1rem;
+}
+
 .letter {
   width: 3rem;
   height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .game-row {
@@ -38,4 +55,61 @@
   margin-top: 1rem;
   width: 20rem;
   justify-content: space-between;
+}
+
+form {
+  margin-top: 1rem;
+  display: flex;
+  height: 2rem;
+  justify-content: space-between;
+}
+
+/* input {
+  margin-right: 1rem;
+} */
+
+button {
+  background-color: darkgrey;
+  border-radius: 10px;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  height: 2rem;
+  margin-left: 1rem;
+  padding: 0.4rem 0.8rem;
+}
+
+.buttons {
+  height: 2rem;
+  display: flex;
+  margin: 1rem 0;
+}
+
+/* .giveup {
+  margin: 1rem 0;
+} */
+
+.simple-keyboard.hg-theme-default.keyboard {
+  border: 5px solid rgba(136, 153, 160, 0.7);
+  border-radius: 10px;
+  margin: 10px;
+  width: min(500px, 95vw);
+  color: #4f4f4f;
+}
+
+.simple-keyboard.hg-layout-default .hg-button.hg-red {
+  background: rgba(26, 36, 23, 0.7);
+  color: white;
+}
+
+p {
+  margin-top: 1rem;
+  font-size: 1rem;
+  color: #aaa;
+  font-weight: bold;
+}
+
+input[type='range'] {
+  color: red;
+  background: red;
 }
